--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
-    <!-- Diseño -->
-    <link rel="stylesheet" href="css/diseño.css">
-    <link rel="stylesheet" href="css/menu.css">
+    <title>Webs</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
-    <header>
-        <div class="logo">
-            <h1>Marteo</h1>
+    <section class="Presentacion">
+        <div class="info">
+            <h1 id="presentacion">Hola Bienvenid@</h1>
+            <h2>Soy Mateo, Desarrollador Front-end Junior</h2>
+            <br>
+            <h3>Desde Argentina, desarrollo y diseño paginas webs <br> me encantaria ayudarte con uno de tus Proyectos
+            </h3>
         </div>
-        <nav class="navegacion">
-            <ul>
-                <li><a href="" class="actual">Inicio</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Descargar</a></li>
-                <li><a href="">Contacto</a></li>
-                <li><a href="">Acerca De</a></li>
-            </ul>
-        </nav>
-    </header>
+        <br>
+        <button id="contact">Contáctame<span class="material-icons-outlined">
+        </button>
+    </section>
+
+    <div class="proyectos">
+        
+    </div>
 </body>
+
 </html>
