--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
     </section>
 
     <div class="proyectos">
-        
+        <div class="proyecto1">
+            <img src="" alt="Un clon de google Simple">
+        </div>
     </div>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
