--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webs</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
-    <script async src="https://cse.google.com/cse.js?cx=04583b42ba4f348f1">
-    </script>
-    <div class="gcse-searchbox-only"></div>
+    <section class="Presentacion">
+        <div class="info">
+            <h1 id="presentacion">Hola Bienvenid@</h1>
+            <h2>Soy Mateo, Desarrollador Front-end Junior</h2>
+            <br>
+            <h3>Desde Argentina, desarrollo y diseño paginas webs <br> me encantaria ayudarte con uno de tus Proyectos
+            </h3>
+        </div>
+        <br>
+        <button id="contact">Contáctame<span class="material-icons-outlined">
+        </button>
+    </section>
+
+    <div class="proyectos">
+        <div class="proyecto1">
+            <img src="" alt="Un clon de google Simple">
+        </div>
+    </div>
+
+    <script src="main.js"></script>
 </body>
+
 </html>
