--- a/proyectos/clongoogle/index.html
+++ b/proyectos/clongoogle/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script async src="https://cse.google.com/cse.js?cx=04583b42ba4f348f1">
-    </script>
-    <div class="gcse-searchbox-only"></div>
+<script async src="https://cse.google.com/cse.js?cx=04583b42ba4f348f1">
+</script>
+<div class="gcse-searchbox"></div>
+    <div class="gcse-searchresults"></div>
 </body>
 </html>
