--- a/proyectos/clongoogle/index.html
+++ b/proyectos/clongoogle/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ES_ar">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<script async src="https://cse.google.com/cse.js?cx=04583b42ba4f348f1">
-</script>
-<div class="gcse-searchbox"></div>
-    <div class="gcse-searchresults"></div>
+    <script async src="https://cse.google.com/cse.js?cx=04583b42ba4f348f1">
+    </script>
+    <div class="gcse-searchbox-only"></div>
 </body>
 </html>
